# Agent-Canvas

./: AI Twins 2a7fdf260373801b8727daf4ab660d1f.md  AI_Twin_Leads csv 2a7fdf260373801182c5f700baf495a4.csv  AI_Twin_Leads csv 2a7fdf260373801182c5f700baf495a4_all.csv  AI_Twin_Run_Log csv 2a7fdf260373800695aefb3a0a5329e7.csv  AI_Twin_Run_Log csv 2a7fdf260373800695aefb3a0a5329e7_all.csv  Agent Cards 272fdf26037380439480ddb5337ade1b.md  Agent Scaffold 272fdf26037380a0badada4af16e550f.md  Agentic Workbench 272fdf26037380178b18e5aac41be812.md  Command Center - Personal OS.md  Context Dictionary 272fdf260373802b9a3fe7ffe1790793.md  Dana Williams 2a7fdf26037380549317c5a9e927d3ae.md  Dave (Sales Director) 2a7fdf26037380faa46df06e8f8cc95b.md  Detailed Previews 272fdf2603738003a384e72f86f4f3b7.md  Detailed Previews 272fdf260373801a917cda50481e15df.md  Detailed Previews 272fdf26037380c3a7f1e56f5ed45f11.md  Detailed Previews 272fdf26037380d6a41cecae79177112.md  Diagnostic 278fdf260373802bb86ae8e6dc3a1229.md  Free AI Twin Starter Pack 2a7fdf260373808abc07f81ff148dc7c.md  Lab Cards 272fdf26037380beacaaea4006ef7182.md  Link Hub 272fdf26037380ab9bd3da1956216b03.md  Maya Gupta 2a7fdf260373806e92a8df80b7b890b0.md  NicheSnap (ICP Brief Builder) 278fdf2603738063b441e1c87667f3ad.md  Offer Mapper 278fdf26037380ed85a0edd0d5f53a12.md  Offer — We Build Your Governed AI Twin (in 14 Days 2a7fdf260373806ebd29fc2083e48af7.md  Orientation & Program Maps 272fdf26037380bfa373e0a161bf5846.md  Resources 272fdf260373803295a1eaffe32a3d9d.csv  Resources 272fdf260373803295a1eaffe32a3d9d_all.csv  personal_os.db  (+10 more)
(+42 files in other folders)
