[tool.poetry]
name = "personal-os"
version = "0.1.0"
description = "A local Personal OS for automating job scouting and thread spotting."
authors = ["Antigravity <antigravity@google.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"
pydantic-settings = "^2.0"
sqlalchemy = "^2.0"
typer = "^0.9.0"
rich = "^13.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
